syntax = "proto3";

option java_package = "com.github.alvin_nt";

package proto;

service SimpleChat {
  rpc Authorize(RequestAuthorize) returns (ResponseAuthorize) {}
  rpc Connect(RequestConnect) returns (stream Event) {}
  rpc SendCommand(Command) returns (None) {}
}

message None {}

message RequestAuthorize {
  string name = 1;
}

message ResponseAuthorize {
  uint32 session_id = 1;
  string name = 2;
}

message RequestConnect {
  uint32 session_id = 1;
}

message Command {
  uint32 session_id = 1;
  oneof command {
    CommandSay say = 2;
    CommandChangeNick nick = 3;
    CommandJoinChannel join = 4;
    CommandLeaveChannel leave = 5;
    CommandExit exit = 6;
  }
}

message CommandSay {
  string message = 1;
  string channel_name = 2;
}

message CommandChangeNick {
  string name = 1;
}

message CommandJoinChannel {
  string name = 1;
}

message CommandLeaveChannel {
  string name = 1;
}

message CommandExit {}

message Event {
  oneof event {
    EventNone none = 1;
    EventJoin join = 2;
    EventLeave leave = 3;
    EventLog log = 4;
  }
}

message EventNone {}

message EventJoin {
  string name = 1;
}

message EventLeave {
  string name = 1;
}

message EventLog {
  string timestamp = 1;
  string name = 2;
  string message = 3;
}
